# AntLeads

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
apps/api/: config.py  database.py  main.py  models.py
apps/api/routes/: automation.py  funnel.py  leads.py  tasks.py  widgets.py
apps/api/services/: task_automation.py
apps/web/: index.html  package.json  pnpm-lock.yaml
apps/web/src/: App.tsx  index.css
apps/web/src/components/: SkeletonLoader.tsx
apps/web/src/pages/: Dashboard.tsx  FunnelPage.tsx  LeadsPage.tsx  TasksPage.tsx  WidgetsPage.tsx
apps/web/src/services/: api.ts  widgets.ts
apps/web/src/types/: index.ts
apps/widget/: demo.html
apps/widget/src/: widget.js
data/sample/: generate_sample_data.py  import_sample_data.py  leads.json  tasks.json
docs/: CORE_ARCHITECTURE.md  USAGE.md
